updating per recommendations